--- a/Ravlyk/Ravlyk.Droid/packages.config
+++ b/Ravlyk/Ravlyk.Droid/packages.config
@@ -8,6 +8,7 @@
   <package id="SQLitePCL.plugin.sqlite3.android" version="0.9.2" targetFramework="monoandroid60" />
   <package id="SQLitePCL.raw" version="0.9.2" targetFramework="monoandroid60" />
   <package id="Xam.Plugin.Connectivity" version="2.2.12" targetFramework="monoandroid60" />
+  <package id="Xam.Plugins.Settings" version="2.1.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid60" />
