--- a/Ravlyk/Ravlyk.iOS/packages.config
+++ b/Ravlyk/Ravlyk.iOS/packages.config
@@ -7,5 +7,6 @@
   <package id="SQLitePCL.bundle_green" version="0.9.2" targetFramework="xamarinios10" />
   <package id="SQLitePCL.raw" version="0.9.2" targetFramework="xamarinios10" />
   <package id="Xam.Plugin.Connectivity" version="2.2.12" targetFramework="xamarinios10" />
+  <package id="Xam.Plugins.Settings" version="2.1.0" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.0.1.6505" targetFramework="xamarinios10" />
 </packages>
