--- a/Ravlyk/Ravlyk/packages.config
+++ b/Ravlyk/Ravlyk/packages.config
@@ -8,6 +8,8 @@
   <package id="sqlite-net-pcl" version="1.1.2" targetFramework="portable45-net45+win8" />
   <package id="SQLitePCL.bundle_green" version="0.9.2" targetFramework="portable45-net45+win8" />
   <package id="SQLitePCL.raw" version="0.9.2" targetFramework="portable45-net45+win8" />
+  <package id="Toasts.Forms.Plugin" version="2.0.4" targetFramework="portable45-net45+win8" />
   <package id="Xam.Plugin.Connectivity" version="2.2.12" targetFramework="portable45-net45+win8" />
+  <package id="Xam.Plugins.Settings" version="2.1.0" targetFramework="portable45-net45+win8" />
   <package id="Xamarin.Forms" version="2.0.1.6505" targetFramework="portable45-net45+win8+wpa81" />
 </packages>
