--- a/Ravlyk/Ravlyk.iOS/Ravlyk.iOS.csproj
+++ b/Ravlyk/Ravlyk.iOS/Ravlyk.iOS.csproj
@@ -98,10 +98,11 @@
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="CaliburnAppDelegate.cs" />
     <Compile Include="Helpers\Settings.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
-    <Compile Include="SQLite_iOS .cs" />
+    <Compile Include="Services\PlatformService.cs" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
